--- a/src/chat.css
+++ b/src/chat.css
@@ -1,25 +1,39 @@
 /* chat.css */
 
 .chat-container {
-    height: 88vh; /* Set the height of the chat container to 85% of viewport height */
-    overflow-y: auto; /* Add vertical scroll when necessary */
-  }
-  
-  .direct-chat-messages {
-    display: flex;
-    flex-direction: column;
-    height: 100%; /* Fill the entire height of the chat container */
-  }
-  
-  .direct-chat-msg {
-    margin-bottom: 10px; /* Add margin between each message */
-  }
-  
-  .direct-chat-infos {
-    margin-bottom: 5px; /* Add margin below the chat info */
-  }
-  
-  .direct-chat-text {
-    word-wrap: break-word; /* Allow long messages to wrap */
-  }
-  
+  height: 81vh; /* Set the height of the chat container to 100% of viewport height */
+  overflow-y: auto; /* Add vertical scroll when necessary */
+}
+
+.direct-chat-messages {
+  display: flex;
+  flex-direction: column;
+  height: 100%; /* Fill the entire height of the chat container */
+}
+
+.direct-chat-infos {
+  margin-bottom: 5px; /* Add margin below the chat info */
+}
+
+.direct-chat-text {
+  word-wrap: break-word;
+}
+
+.table-responsive {
+  overflow-x: auto; 
+}
+
+/* Optional: Enhance visibility for wide tables */
+.table {
+  white-space: nowrap;
+}
+
+.initial-message {
+  color: black; 
+ font-size: larger;
+ font-weight: 600;
+  padding: 90px;
+  border-radius: 5px;
+  margin: 90px;
+  text-align: center;
+}
