--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-   background-color: #000000a3; -moz-osx-font-smoothing: grayscale;
-
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #000000a3 !important; /* Ensuring it overrides other styles */
 }
 
 code {
