--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000000a3 !important; /* Ensuring it overrides other styles */
+  background-color: #000000a3 !important;
+   /* Ensuring it overrides other styles */
 }
 
 code {
